src/gui/src/css/style.css
/* ... */
.device-phone .window-navbar-layout-settings {
  float: right;
  margin-right: 10px;
}

.window-navbar-path-input {
  overflow: hidden;
  line-height: 17px;
  padding-left: 10px;
  font-size: 15px;
  color: #41484c;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  /* -webkit-font-smoothing: antialiased; */
  border: 1px solid #00b6ff;
  border-radius: 3px;
  background: white;
  display: none;
  box-sizing: border-box;
  padding-top: 9px;
  padding-bottom: 9px;
  outline: 1px solid #00b6ff;
}

.window-navbar-path-input,
.window-navbar-path {
  width: calc(100% - 170px);
  float: left;
}

.window-navbar-path-dirname {
  cursor: pointer;
  font-weight: 500;
  padding: 0px 7px;
  height: 33px;
  display: inline-block;
  overflow: initial !important;
}

.window-navbar-path-dirname-active {
  text-decoration: underline;
}

.window-navbar-path-dirname:hover {
  color: #414a4e;
  text-decoration: underline;
}

.path-seperator {
  width: 10px;
  opacity: 0.2;
}

.window-body {
  width: 100%;
  height: calc(100% - 77px);
  background-color: white;
  overflow: auto;
}

.window-body.item-container {
  box-sizing: border-box;
  width: initial;
  padding-left: 10px;
  border: 3px solid rgba(255, 255, 255, 0);
  position: relative;
}

.item-container-transparent-border {
  border-color: transparent !important;
}

.window-body.item-container-active {
  border-color: #bcedff !important;
}

.device-phone .window-body.item-container {
  padding-left: 0;
}

.window-sidebar {
  min-width: 170px;
  height: calc(100% - 28px);
  float: left;
  border-right: 0.5px solid #ccc;
  padding: 15px 10px;
  box-sizing: border-box;
  background-color: hsla(
    var(--window-sidebar-hue),
    var(--window-sidebar-saturation),
    var(--window-sidebar-lightness),
    calc(0.5 + 0.5 * var(--window-sidebar-alpha))
  );
  overflow-y: scroll;
  margin-top: 1px;
  box-shadow: inset -4px 0 8px -8px rgba(0, 0, 0, 0.3);
}

.window-sidebar .ui-resizable-e {
  right: 0;
}

.window-filedialog .window-sidebar {
  height: calc(100% - 30px);
}

.window-cover-page.window-filedialog .window-body {
  height: calc(100% - 109px) !important;
}

.window-cover-page .window-sidebar {
  height: 100%;
}

.window-cover-page.window-puter-dialog {
  height: 100%;
  width: 100%;
  top: 0 !important;
}

.window-cover-page.window-puter-dialog .window-body {
  width: 100%;
  height: 100%;
  padding: 0 !important;
}

.window-cover-page.window-login,
.window-cover-page.window-signup {
  height: 100vh !important;
  width: 100%;
  top: 0 !important;
}

.window-sidebar-title {
  margin: 0;
  font-weight: bold;
  font-size: 13px;
  color: #8f96a3;
  text-shadow: 1px 1px rgb(247 247 247 / 15%);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding-left: 6px;
  cursor: default;
  margin-top: 20px;
  margin-bottom: 5px;
}

.window-sidebar-title:first-child {
  padding-left: 1px;
  margin-top: 0px;
}

.window-sidebar-item:hover,
.window-sidebar-item.has-open-contextmenu {
  background-color: rgba(243, 243, 243, 0.8);
  cursor: pointer;
}

.window-sidebar-item,
.window-sidebar-item.grabbing {
  margin-bottom: 6px;
  margin-top: 2px;
  padding: 4px;
  border-radius: 3px;
  color: #444444;
  font-size: 13px;
  cursor: pointer;
  transition: 0.15s background-color;
  box-sizing: border-box;
  overflow-x: hidden !important;
  overflow-y: hidden !important;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.window-sidebar-item-active,
.window-sidebar-item-drag-active,
.window-sidebar-item-active:hover {
  background-color: #fefeff;
}

.window-sidebar-item-placeholder {
  height: 27px !important;
}

.window-sidebar-item {
  cursor: pointer !important;
  user-select: none;
}

.window-sidebar-item:not(.window-sidebar-title):hover {
  cursor: grab;
}

.window-sidebar-item.grabbing {
  cursor: grabbing !important;
}

.window-sidebar-item-dragging {
  background-color: #f5f5f5 !important;
  opacity: 0.8;
  cursor: grabbing;
}

.ui-sortable-helper {
  background: white !important;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1) !important;
}

.window-sidebar-item-icon {
  width: 14px;
  height: 14px;
  filter: drop-shadow(0px 0px 0.2px rgb(51, 51, 51));
  margin-right: 5px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  margin-bottom: -2px;
}

.window[data-app="explorer"] .window-body {
  height: calc(100% - 107px);
}

.explorer-footer {
  background: white;
  overflow: auto;
  height: 30px;
  font-size: 13px;
  line-height: 28px;
  padding-left: 10px;
  background-color: #fafafa;
  border-top: 1px solid #e3e3e3;
  color: #505050;
  user-select: none !important;
  -moz-user-select: none !important;
  -webkit-user-select: none !important;
  -ms-user-select: none !important;
  cursor: default;
}

.device-phone .explorer-footer {
  width: 100%;
}

.explorer-footer-seperator,
.explorer-footer-selected-items-count {
  display: none;
}

.explorer-footer-seperator {
  margin: 15px;
  color: #ccc;
}

.window-body-filedialog {
  height: calc(100% - 137px);
}

.window-body-app {
  height: calc(100% - 30px);
}

.fullpage-mode.device-phone .window-body-app {
  height: calc(100%);
}

.window-filedialog-prompt {
  height: 60px;
  border-top: 1px solid #dbdee3;
  background-color: #f3f5f9;
  padding: 0 15px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.savefiledialog-filename {
  float: left;
  margin-right: 10px;
  padding: 5px !important;
  border-width: 1px !important;
  height: 31px;
  flex-grow: 1;
}

.window-filedialog-upload-here {
  -webkit-font-smoothing: antialiased;
  opacity: 0.7;
  font-size: 14px;
}

.window-filedialog-upload-here:hover {
  cursor: pointer;
  opacity: 1;
}

.savefiledialog-save-btn,
.openfiledialog-open-btn {
  margin-left: 10px;
}

.filedialog-cancel-btn {
  margin-left: 10px;
}

.window-action-btn {
  margin-right: 5px;
  margin-left: 10px;
  padding-bottom: 3px;
  opacity: 0.6;
}
/* ... */

